[package]
name = "sublt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = { version = "0.3.1" }
clap = { version = "3.1.6", features = ["derive"] }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
cumulus-primitives-core =  { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.17'}

polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.17" }


[[bin]]
name = "sublt"
path = "src/main.rs"


